--- a/pipeline.yml
+++ b/pipeline.yml
@@ -10,12 +10,5 @@ jobs:
   plan:
   - get: source-code
     trigger: true
-  - task: say-hello
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source: {repository: ubuntu}
-      run:
-        path: echo
-        args: ["Hello, Coffee!"]
+  - task: echo
+    file: echo.yml
