--- a/echo.yml
+++ b/echo.yml
@@ -1,9 +1,11 @@
-- task: say-hello
-  config:
-    platform: linux
-    image_resource:
-      type: docker-image
-      source: {repository: ubuntu}
-    run:
-      path: echo
-      args: ["Hello, Coffee!"]
+platform: linux
+image_resource:
+  type: docker-image
+  source: {repository: ubuntu}
+
+inputs:
+- name: source-code
+
+run:
+  path: echo
+  args: ["Hello, Coffee!"]
