--- a/pipeline.yml
+++ b/pipeline.yml
@@ -11,4 +11,4 @@ jobs:
   - get: source-code
     trigger: true
   - task: echo
-    file: cf-week-concourse/echo.yml
+    file: source-code/echo.yml
