--- a/echo.yml
+++ b/echo.yml
@@ -1,7 +1,7 @@
 platform: linux
 image_resource:
   type: docker-image
-  source: {repository: ubuntu}
+  source: {repository: ntschutta/cf-week}
 
 inputs:
 - name: source-code
