--- a/echo.yml
+++ b/echo.yml
@@ -3,7 +3,7 @@ image_resource:
   type: docker-image
   source:
     repository: ntschutta/cf-week
-    tag: latest
+    tag: 1
 
 inputs:
 - name: source-code
